--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {font-family: "iconfont";
-  src: url('iconfont.woff?t=1556983560105') format('woff'),
-  url('iconfont.ttf?t=1556983560105') format('truetype'); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+  src: url('iconfont.woff?t=1557560541962') format('woff'),
+  url('iconfont.ttf?t=1557560541962') format('truetype')； /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
 }
 
 .iconfont {
@@ -16,7 +16,7 @@
 }
 
 .icon-tongzhi:before {
-  content: "\e62c";
+  content: "\e61d";
 }
 
 .icon-icon-test:before {
