--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -19,6 +19,24 @@ html, body {
   }
 }
 
-.home-container {
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  &::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    height: 1px;
+    transform: scaleY(0.5);
+    background: #ddd;
+  }
+}
+
+.page-container {
   padding-top: 45px;
 }
